syntax = "proto3";

package pb;

option go_package = "github.com/lovelyoyrmia/movies-api/domain/pb";

message MovieParams {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string image = 4;
    float rating = 5;
}

message MovieIDParams {
    int32 id = 1;
}

message ListMoviesParams {
    optional int32 limit = 1;
}

message Movie {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string image = 4;
    float rating = 5;
    string created_at = 6;
    string updated_at = 7;
}

message MovieResponse {
    string code = 1;
    string message = 3;
    Movie data = 4;
}

message ListMoviesResponse {
    string code = 1;
    string message = 3;
    repeated Movie data = 4;
}
